# goback

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  appwrite_session.py  compose.yaml  config_manager.py  docker-compose.yaml  forms.py  goback.toml  models.py  mysql_table_structure.sql  mysql_tables_structure.sql  package-lock.json  requirements.txt  scraper.py  webserver.py
.github/workflows/: main.yml
goback-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
goback-frontend/src/: App.tsx  main.tsx
goback-frontend/src/components/: AuthContext.tsx  AuthenticatedRoute.tsx  Navbar.tsx  ProtectedComponent.tsx
goback-frontend/src/pages/: CreationPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  SignupPage.tsx
goback-frontend/src/routes/: CreateBackupPage.tsx  Dashboard.tsx  ErrorPage.tsx  Home.tsx  JobTracker.tsx  JobViewer.tsx  ListJobs.tsx  Login.tsx  LogoutRoute.tsx  Signup.tsx
goback-frontend/src/types/: Job.tsx
html-parsing-py/: Cargo.toml  htmlfile.html  pyproject.toml  testfile.py
html-parsing-py/src/: lib.rs
playground/: _beautiful.py  _index.html
templates/: dashboard.html  index.html  login.html  signup.html
test_html_documents/: basic_document.html  document_caching.html  document_img.html  document_with__external_css.html  document_with_external_javascript.html  document_with_music.html  document_with_url_loading.html  forwarded-forwarded.html  invalid-document.html  invalid_tags.html  stylesheet.css
test_html_documents/test-folder/: relative_path.html
(+7 files in other folders)
