[package]
name = "html-parsing-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html_parsing_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
